# projs-for-lfd-rendering

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  anim.cpp  anim.h  draw.fs  draw.vs  gui.cpp  interlacingShader.vs  interlacingShaderEfficient.fs  interlacingShaderStandard.fs  lfd_rendering  lightfield.h  main.cpp  named_handle.h  shader.cpp  texture.h
subtrees/assimp/: CMakeLists.txt
